# ConformalGeometry

./: README.md  push.sh  shader1  wuli_online_note.md
CCGHomework_skeleton/: CMakeLists.txt  README.md
CCGHomework_skeleton/cmake_modules/: FindFreeGLUT.cmake
CCGHomework_skeleton/cutgraph/: CMakeLists.txt
CCGHomework_skeleton/cutgraph/include/: CutGraph.h  CutGraphMesh.h
CCGHomework_skeleton/cutgraph/src/: CutGraph.cpp  Viewer.cpp
CCGHomework_skeleton_new/: CMakeLists.txt  README.md
CCGHomework_skeleton_new/cutgraph/: CMakeLists.txt
CCGHomework_skeleton_new/cutgraph/include/: CutGraph.h
CCGHomework_skeleton_new/cutgraph/src/: CutGraph.cpp
assignment1/CCGHomework_skeleton_new/: torus.sh
assignment1_火烧法/CCGHomework_skeleton_new/: eight.sh
assignment2/: ccg_homework_skeleton.rar
assignment2/ccg_homework_skeleton_new/: CMakeLists.txt
assignment2/ccg_homework_skeleton_new/cutgraph/: README.md
assignment2/ccg_homework_skeleton_new/cutgraph/src/: CutGraph.cpp
assignment2/ccg_homework_skeleton_new/data/: boy.m  torus.m
assignment2/ccg_homework_skeleton_new/harmonic_map/include/: HarmonicMap.h  HarmonicMapMesh.h
assignment2/ccg_homework_skeleton_new/harmonic_map/src/: HarmonicMap.cpp  HarmonicMapDemo.cpp  Viewer.cpp
assignment2_圆盘调和映照/ccg_homework_skeleton_new/cutgraph/include/: CutGraph.h
assignment2_圆盘调和映照/ccg_homework_skeleton_new/cutgraph/src/: Viewer.cpp
assignment2_圆盘调和映照/ccg_homework_skeleton_new/harmonic_map/: README.md
assignment2_圆盘调和映照/ccg_homework_skeleton_new/harmonic_map/include/: HarmonicMap.h
assignment2_调和映照/ccg_homework_skeleton_new/: README.md
assignment2_调和映照/ccg_homework_skeleton_new/cutgraph/include/: CutGraphMesh.h
assignment2_调和映照/ccg_homework_skeleton_new/data/: eight.m
assignment2_调和映照/ccg_homework_skeleton_new/harmonic_map/: CMakeLists.txt
assignment2_调和映照/ccg_homework_skeleton_new/harmonic_map/src/: Viewer.cpp
assignment3/Assignment_3_skeleton/: CMakeLists.txt
assignment3/Assignment_3_skeleton/data/boy/: boy.m  boy.open.m
assignment3/Assignment_3_skeleton/data/eight/: eight.cut.m  eight.m  eight.open.m
assignment3/Assignment_3_skeleton/data/face/: face.m  face.open.m
assignment3/Assignment_3_skeleton/data/girl/: girl.m  girl.open.m
assignment3/Assignment_3_skeleton/data/kitten/: kitten.m  kitten.open.m
assignment3/Assignment_3_skeleton/data/mug/: mug.m  mug.open.m
assignment3/Assignment_3_skeleton/data/rocker/: rocker.m  rocker.open.m
assignment3/Assignment_3_skeleton/data/torus/: torus.m  torus.open.m
assignment3/Assignment_3_skeleton/hodge_decomposition/: CMakeLists.txt  README.md
assignment3/Assignment_3_skeleton/hodge_decomposition/include/: HodgeDecomposition.h  HodgeDecompositionMesh.h  WedgeProduct.h
assignment3/Assignment_3_skeleton/hodge_decomposition/src/: HodgeDecomposition.cpp  Viewer.cpp
assignment4/ccg-homework4_skeleton/: CMakeLists.txt
assignment4/ccg-homework4_skeleton/spherical_harmonic_map/: CMakeLists.txt
assignment4/ccg-homework4_skeleton/spherical_harmonic_map/include/: SphericalHarmonicMap.h  SphericalHarmonicMapMesh.h
assignment4/ccg-homework4_skeleton/spherical_harmonic_map/src/: SphericalHarmonicMap.cpp  SphericalHarmonicMapDemo.cpp  Viewer.cpp
assignment4_球面调和映照/ccg-homework4_skeleton/: README.md
assignment4_球面调和映照/ccg-homework4_skeleton/data/: bimba.m  brain.m
assignment4_球面调和映照/ccg-homework4_skeleton/spherical_harmonic_map/: README.md
assignment4_球面调和映照/ccg-homework4_skeleton/spherical_harmonic_map/src/: SphericalHarmonicMapBak.cpp  Viewer.cpp
assignment5/Assignment_5_Skeleton/: README.md
assignment5/Assignment_5_Skeleton/ot_2d/include/: OT.h  OTMesh.h
assignment5/Assignment_5_Skeleton/ot_2d/src/: OT.cpp  Viewer.cpp
assignment5_深度学习的几何观点与最优传输/Assignment_5_Skeleton/: CMakeLists.txt
assignment5_深度学习的几何观点与最优传输/Assignment_5_Skeleton/data/: boy.m
assignment5_深度学习的几何观点与最优传输/Assignment_5_Skeleton/ot_2d/: CMakeLists.txt  README.md
assignment5_深度学习的几何观点与最优传输/Assignment_5_Skeleton/ot_2d/include/: CDomainOptimalTransport.h  Detri2Mesh.h
assignment5_深度学习的几何观点与最优传输/Assignment_5_Skeleton/ot_2d/src/: CDomainOptimalTransport.cpp
